--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -43,12 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
   },
   {
    "cell_type": "markdown",
